@@ -59,6 +59,7 @@ this repository contains the full copyright notices and license terms. -->
                         <field name="date" select="1"/>
                         <field name="state" select="1"/>
                         <field name="company" select="2"/>
+                        <field name="create_date" tree_invisible="1" select="2"/>
                     </tree>
                 ]]>
             </field>
@@ -67,6 +68,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">Inventories</field>
             <field name="res_model">stock.inventory</field>
             <field name="view_type">form</field>
+            <field name="search_value">{'create_date': ['between', Date(delta_years=-1)]}</field>
         </record>
         <record model="ir.action.act_window.view"
                 id="act_inventory_form_view1">
