@@ -51,6 +51,7 @@ this repository contains the full copyright notices and license terms. -->
                         <field name="uom" select="2"/>
                         <field name="state" select="2"/>
                         <field name="unit_digits" tree_invisible="1"/>
+                        <field name="create_date" tree_invisible="1" select="2"/>
                     </tree>
                 ]]>
             </field>
@@ -59,6 +60,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">Moves</field>
             <field name="res_model">stock.move</field>
             <field name="view_type">form</field>
+            <field name="search_value">{'create_date': ['between', Date(delta_years=-1)]}</field>
         </record>
         <record model="ir.action.act_window.view" id="act_move_form_view1">
             <field name="sequence" eval="1"/>
@@ -79,6 +81,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="res_model">stock.move</field>
             <field name="view_type">form</field>
             <field name="domain">[('from_location.type', '=', 'supplier')]</field>
+            <field name="search_value">{'create_date': ['between', Date(delta_years=-1)]}</field>
         </record>
         <record model="ir.action.act_window.view" id="act_move_form_supp_view1">
             <field name="sequence" eval="1"/>
@@ -121,6 +124,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="res_model">stock.move</field>
             <field name="view_type">form</field>
             <field name="domain">[('to_location.type', '=', 'customer')]</field>
+            <field name="search_value">{'create_date': ['between', Date(delta_years=-1)]}</field>
         </record>
         <record model="ir.action.act_window.view"
                 id="act_move_form_cust_view1">
