@@ -1,3 +1,5 @@
+* Add default search value on inventory, move and shipments
+
 Version 1.4.0 - 2009-10-19
 * Bug fixes (see mercurial logs for details)
 * Add new group "Stock Force Assignment"
